--- a/kilgamer.theme.css
+++ b/kilgamer.theme.css
@@ -8,7 +8,7 @@
  * @source https://github.com/kilgamer-steam/kilgamer_theme
 */
 
-@import url(https://puckzxz.github.io/NotAnotherAnimeTheme/build/v3/naat.v3.css);
+@import url("https://kilgamer-steam.github.io/kilgamer_theme/code/resourse/neko.css");
 /*addon*/
 @import url("https://kilgamer-steam.github.io/kilgamer_theme/code/resourse/addon/accauntdetail.css");
 /*code*/
