--- a/kilgamer.theme.css
+++ b/kilgamer.theme.css
@@ -25,7 +25,7 @@
 
   /*[MAIN THEME SETTINGS]*/
   /*Some important settings that will change the majority of your client.*/
-  --theme-background-image: url("https://kilgamer-steam.github.io/kilgamer_theme/code/resourse/background.jpeg"); /*The main image over your whole Discord client*/
+  --theme-background-image: url("https://kilgamer-steam.github.io/kilgamer_theme/code/resourse/background.jpg"); /*The main image over your whole Discord client*/
   --main-theme-color: #; /*The default theme color*/
   --theme-transparency: rgba(0, 0, 0, 0.4); /*The mask that applies over the background*/
   --home-icon-image: url("https://kilgamer-steam.github.io/kilgamer_theme/code/resourse/discord_neko.jpg"); /*Your friends icon*/
